--- a/test_app_docker_comose.yaml
+++ b/test_app_docker_comose.yaml
@@ -5,22 +5,24 @@ services:
     image: postgres:14
     container_name: postgres-db
     ports:
-      - "5432:5432"
+      - "5435:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
     environment:
+      - POSTGRES_USER=batman
       - POSTGRES_PASSWORD=pswd
-
+      - POSTGRES_DB=test_db
+      
   test_app_compose:
     image: test-app:1.0
-    container_name: django-app
+    container_name: test-app
     ports:
       - "8000:8000"
     depends_on:
       - test_postgres_compose
     environment:
-      - DATABASE_NAME=postgres
-      - DATABASE_USER=postgres
+      - DATABASE_NAME=test_db
+      - DATABASE_USER=batman
       - DATABASE_PASSWORD=pswd
       - DATABASE_HOST=postgres-db
       - DATABASE_PORT=5432
