--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -17,10 +17,23 @@ jobs:
       - name: test_stuffs
         run: echo "Tested"
       - name: Insatll python version ${{ matrix.python-version }}
-        uses: actions/seup-python@v5
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
       - name: Update pip
         run: python -m pip insatll --upgrade pip
       - name: Insatll dependencies
         run: pip insatll -r requirements.txt
+
+
+# steps:
+# - uses: actions/checkout@v4
+# - name: Set up Python
+#   uses: actions/setup-python@v5
+#   with:
+#     python-version: '3.x'
+# - name: Install dependencies
+#   run: |
+#     python -m pip install --upgrade pip
+#     pip install -r requirements.txt
+
