--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -21,9 +21,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Update pip
-        run: python -m pip insatll --upgrade pip
+        run: python -m pip install --upgrade pip
       - name: Insatll dependencies
-        run: pip insatll -r requirements.txt
+        run: pip install -r requirements.txt
 
 
 # steps:
