--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -4,11 +4,27 @@ on: [push]
 
 jobs:
   build:
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_PASSWORD: pswd
+          POSTGRES_DB: test_db
+        ports:
+        - 5432:5432         
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+        
+
 
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.10", "3.11", "3.12"]
 
 
     steps:
@@ -24,16 +40,25 @@ jobs:
         run: python -m pip install --upgrade pip
       - name: Insatll dependencies
         run: pip install -r requirements.txt
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          context: ./
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/test_project:1.0
+          cache-from: type=local,src=${{ runner.temp }}/.buildx-cache
+          cache-to: type=local,dest=${{ runner.temp }}/.buildx-cache-new,mode=max
+          
 
 
-# steps:
-# - uses: actions/checkout@v4
-# - name: Set up Python
-#   uses: actions/setup-python@v5
-#   with:
-#     python-version: '3.x'
-# - name: Install dependencies
-#   run: |
-#     python -m pip install --upgrade pip
-#     pip install -r requirements.txt
+
+
 
