--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -40,18 +40,23 @@ jobs:
         run: python -m pip install --upgrade pip
       - name: Insatll dependencies
         run: pip install -r requirements.txt
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
       - name: Set up Docker Buildx
+        id: buildx
         uses: docker/setup-buildx-action@v3
+        
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
           context: ./
           file: ./Dockerfile
+          builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/test_project:latest
           cache-from: type=local,src=${{ runner.temp }}/.buildx-cache
