--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -4,6 +4,22 @@ on: [push]
 
 jobs:
   build:
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_PASSWORD: pswd
+          POSTGRES_DB: test_db
+        ports:
+        - 5432:5432         
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+        
+
 
     runs-on: ubuntu-latest
     strategy:
