--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -4,66 +4,23 @@ on: [push]
 
 jobs:
   build:
-    services:
-      postgres:
-        image: postgres
-        env:
-          POSTGRES_PASSWORD: pswd
-          POSTGRES_DB: test_db
-        ports:
-        - 5432:5432         
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
-        
-
-
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.12"]
-
-
     steps:
-      - name: pull
+      - name: Checkout code
         uses: actions/checkout@v4
-      - name: test_stuffs
-        run: echo "Tested"
-      - name: Insatll python version ${{ matrix.python-version }}
+
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Update pip
-        run: python -m pip install --upgrade pip
-      - name: Insatll dependencies
-        run: pip install -r requirements.txt
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v6
-        with:
-          context: ./
-          file: ./Dockerfile
-          builder: ${{ steps.buildx.outputs.name }}
-          push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/test_project:latest
-          cache-from: type=local,src=${{ runner.temp }}/.buildx-cache
-          cache-to: type=local,dest=${{ runner.temp }}/.buildx-cache-new,mode=max
-          
-
-
-
-
-
+      - name: Echo test
+        run: echo "All working fine!"
