--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -3,24 +3,50 @@ name: Build and Deploy
 on: [push]
 
 jobs:
-  build:
+  build:        
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.12"]
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
 
-      - name: Setup Python
+
+    steps:
+      - name: pull
+        uses: actions/checkout@v4
+      - name: test_stuffs
+        run: echo "Tested"
+      - name: Insatll python version ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Update pip
+        run: python -m pip install --upgrade pip
+      - name: Insatll dependencies
+        run: pip install -r requirements.txt
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-      - name: Echo test
-        run: echo "All working fine!"
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: ./
+          file: ./Dockerfile
+          builder: ${{ steps.buildx.outputs.name }}
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/test_project:latest
+          cache-from: type=local,src=${{ runner.temp }}/.buildx-cache
+          cache-to: type=local,dest=${{ runner.temp }}/.buildx-cache-new,mode=max
+          
+
+
+
+
+
