--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.12"]
+        python-version:  ["3.10", "3.11", "3.12", "3.13"]
 
 
     steps:
@@ -44,9 +44,3 @@ jobs:
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/test_project:latest
           cache-from: type=local,src=${{ runner.temp }}/.buildx-cache
           cache-to: type=local,dest=${{ runner.temp }}/.buildx-cache-new,mode=max
-          
-
-
-
-
-
