--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -1,27 +1,33 @@
 name: Build and Deploy
 
-on: [push]
+on:
+  push:
+    branches:
+      - main  
 
 jobs:
-  build:        
+  build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version:  ["3.10", "3.11", "3.12", "3.13"]
-
+        python-version: ["3.10", "3.11", "3.12", "3.13"]
 
     steps:
-      - name: pull
+      - name: Checkout code
         uses: actions/checkout@v4
-      - name: test_stuffs
+
+      - name: Test stuff
         run: echo "Tested"
-      - name: Insatll python version ${{ matrix.python-version }}
+
+      - name: Install Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Update pip
         run: python -m pip install --upgrade pip
-      - name: Insatll dependencies
+
+      - name: Install dependencies
         run: pip install -r requirements.txt
 
       - name: Login to Docker Hub
@@ -44,3 +50,25 @@ jobs:
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/test_project:latest
           cache-from: type=local,src=${{ runner.temp }}/.buildx-cache
           cache-to: type=local,dest=${{ runner.temp }}/.buildx-cache-new,mode=max
+
+  deploy:
+    name: Deploy to EC2
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Set up SSH key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
+
+      - name: Pull and run Docker image on EC2
+        run: |
+          ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+            docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/test_project:latest
+            docker stop test_project || true
+            docker rm test_project || true
+            docker run -d --name test_project -p 80:80 ${{ secrets.DOCKER_HUB_USERNAME }}/test_project:latest
+          EOF
