--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -63,12 +63,15 @@ jobs:
           echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
-
-      - name: Pull and run Docker image on EC2
+      - name: Test Connection
         run: |
           ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
-            docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/test_project:latest
-            docker stop test_project || true
-            docker rm test_project || true
-            docker run -d --name test_project -p 80:80 ${{ secrets.DOCKER_HUB_USERNAME }}/test_project:latest
-          EOF
+          echo "Connection tested" >> test_run
+      # - name: Pull and run Docker image on EC2
+      #   run: |
+      #     ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+      #       docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/test_project:latest
+      #       docker stop test_project || true
+      #       docker rm test_project || true
+      #       docker run -d --name test_project -p 80:80 ${{ secrets.DOCKER_HUB_USERNAME }}/test_project:latest
+      #     EOF
