--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -54,21 +54,27 @@ jobs:
 #cd
 
   deploy:
-    needs: ["build"]
-    runs-on: ubuntu-latest
+  needs: ["build"]
+  runs-on: ubuntu-latest
 
-    steps:
-      - name: Deploy to EC2
-        env:
-          PRIVATE_KEY: ${{ secrets.SSH_KEY }}
-          HOST: ${{ secrets.EC2_HOST }}
-          USER: ${{ secrets.EC2_USER }}
-        run: |
+  steps:
+    - name: Deploy to EC2
+      env:
+        PRIVATE_KEY: ${{ secrets.SSH_KEY }}
+        HOST: ${{ secrets.EC2_HOST }}
+        USER: ${{ secrets.EC2_USER }}
+      run: |
+        mkdir -p ~/.ssh
+        echo "$PRIVATE_KEY" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
 
-          mkdir -p .ssh
-          echo "$PRIVATE_KEY" > id_ira.pem
-          ssh -i id_ira.pem ${USER}@${HOST}
+        # Disable strict host key checking
+        echo -e "Host *\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
+
+        # Run SSH command
+        ssh -i ~/.ssh/id_rsa ${USER}@${HOST} << 'EOF'
           echo "Current directory: $(pwd)"
-          touch succesful
+          touch successful
           echo "Listing home directory:"
           ls -la ~
+        EOF
