--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -74,4 +74,8 @@ jobs:
           ssh -i ~/.ssh/id_rsa ${USER}@${HOST} << 'EOF'
             
             docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/test_project:latest
+            sleep 2
+            docker run --name test_app -d -p 80:8000  batman39/test_project
+            curl loclhost
+
           EOF
