--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -11,7 +11,9 @@ jobs:
         python-version: ['3.10','3.11']
     
     stpes:
-      - uses: actions/chekkout@v4
+      - name: checkout Repo
+        uses: actions/chekkout@v4
+
       - name: Set up python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
@@ -22,5 +24,4 @@ jobs:
 
       - name: Display Python version
         run: python -c "Import sys; print(sys.version)"
-      
       
