--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -10,18 +10,17 @@ jobs:
       matrix:
         python-version: ['3.10','3.11']
     
-    stpes:
-      - name: checkout Repo
-        uses: actions/chekkout@v4
-
-      - name: Set up python ${{ matrix.python-version }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-
-      - name: try this way
-        run: echo "python3 -V"
-
+      - name: Try this way
+        run: python3 -V
       - name: Display Python version
-        run: python -c "Import sys; print(sys.version)"
+        run: python -c "import sys; print(sys.version)"
       
+
+
+
