--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -16,10 +16,21 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Try this way
+      
+      - name: Show Python version
         run: python3 -V
-      - name: Display Python version
-        run: python -c "import sys; print(sys.version)"
+
+      - name: Insatll dependcies
+        run: |
+          python -m pip install --upgrade pip
+          pip insatll -r requirements.txt
+      
+      - name: Test Django
+        run: |
+          python3 manage.py migrate
+          python3 manage.py makemigrations
+          python3 manage.py runserver 
+        
       
 
 
