--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: Insatll dependcies
         run: |
           python -m pip install --upgrade pip
-          pip insatll -r requirements.txt
+          pip install -r requirements.txt
       
       - name: Test Django
         run: |
