Github Actions further testing

--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -29,7 +29,9 @@ jobs:
         run: |
           python3 manage.py migrate
           python3 manage.py makemigrations
-          python3 manage.py runserver 
+          nohup python3 manage.py runserver &
+          curl localhost
+          exit
         
       
 
