--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -25,15 +25,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       
-      - name: Test Django
-        run: |
-          python3 manage.py migrate
-          python3 manage.py makemigrations
-          nohup python3 manage.py runserver &
-          curl localhost
-          exit
-        
-      
-
+      - name: Dockerize the app
+        run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+        run: docker images
 
 
