--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -39,8 +39,10 @@ jobs:
 
       - name: Connect to EC2 and run command
         run: |
-          ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "echo 'Connected to EC2 via GitHub Actions!'"
-          rm file || echo "done"
-          touch file
+          ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "echo 'Connected to EC2 via GitHub Actions!'" << 'EOF'
+            whoami
+            rm file || echo "done"
+            touch file
+          EOF
      
 
