--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -42,11 +42,8 @@ jobs:
           ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
           whoami
           rm file || echo "done"
-          touch file
+          echo "💡 The ${{ github.repository }} repository has been cloned to the runner.
+          git clone {{ github.repository }}
+          touch file 
           
-
-      # - name: Test Connection
-      #   run: |
-      #     ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
-      #     echo "Connection tested" >> test_run
-
+      
