--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -42,7 +42,7 @@ jobs:
           ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
           whoami
           rm file || echo "done"
-          echo "💡 The ${{ github.repository }} repository has been cloned to the runner.
+          echo "The ${{ github.repository }} repository has been cloned to the runner."
           git clone {{ github.repository }}
           touch file 
           
