--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -42,7 +42,7 @@ jobs:
           ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}
             whoami
             rm file || echo "file not found"
-            /$HOME/bin/check.sh
+            /home/{{ secrets.EC2_USER }}/bin/check.sh
 
       - name: Copy repo to EC2
         run: |
