--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -42,10 +42,11 @@ jobs:
           ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}
             whoami
             rm file || echo "file not found"
-            /home/${{ secrets.EC2_USER }}/bin/check.sh
+            ls /home/${{ secrets.EC2_USER }}/bin
 
-      - name: Copy repo to EC2
-        run: |
-          scp -r . ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/my-app
-          touch file 
+
+      # - name: Copy repo to EC2
+      #   run: |
+      #     scp -r . ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/my-app
+      #     touch file 
 
