Github Actions further testing

--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -45,6 +45,8 @@ jobs:
             /home/${{ secrets.EC2_USER }}/bin/check.sh
           EOF
 
+      - name: Remove .git before copying
+        run: rm -rf .git
 
       - name: Copy repo to EC2
         run: |
